fix stretch attempt 4

--- a/src/Pages/Home/HighlightsCarousel.css
+++ b/src/Pages/Home/HighlightsCarousel.css
@@ -14,8 +14,6 @@
 }
 
 .homeHighlights_carouselCard img {
-  height: 537rem;
-  width: 300rem;
   margin: auto;
 }
 
